fix: create notice 테스트 코드
;